@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.example</groupId>
-    <artifactId>nopcommerce-automation-framework</artifactId>
+    <artifactId>phptravel-automation-framwork</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -65,15 +65,16 @@
         </dependency>
 
         <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-testng</artifactId>
-            <version>${cucumber.version}</version>
-        </dependency>
-
-        <dependency>
             <groupId>net.masterthought</groupId>
             <artifactId>cucumber-reporting</artifactId>
             <version>5.7.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-java</artifactId>
+            <version>${cucumber.version}</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -155,9 +156,12 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <!-- Run TestRunner file -->
+<!--                    <parallel>classes</parallel>-->
+<!--                    <forkCount>3C</forkCount>-->
+<!--                    <threadCount>3</threadCount>-->
+<!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                     <includes>
-                        <include>**/*/CucumberTestRunner.java</include>
+                        <include>**/cucumber_options/TestRunner.java</include>
                     </includes>
                 </configuration>
             </plugin>
@@ -166,7 +170,7 @@
             <plugin>
                 <groupId>net.masterthought</groupId>
                 <artifactId>maven-cucumber-reporting</artifactId>
-                <version>3.10.0</version>
+                <version>5.7.0</version>
                 <executions>
                     <execution>
                         <id>execution</id>
@@ -175,9 +179,12 @@
                             <goal>generate</goal>
                         </goals>
                         <configuration>
-                            <projectName>PHP Travel Automation Framework</projectName>
+                            <projectName>Cucumber Maven Sample Project</projectName>
+                            <inputDirectory>${project.build.directory}/site</inputDirectory>
                             <outputDirectory>${project.build.directory}/site/cucumber-reporting</outputDirectory>
-                            <cucumberOutput>${project.build.directory}/site/cucumber.json</cucumberOutput>
+                            <jsonFiles>
+                                <param>**/*.json</param>
+                            </jsonFiles>
                         </configuration>
                     </execution>
                 </executions>
